- fixed IOC-232 - Exception when using delegate based factories can throw when registered implicitly and used as dependencies of generic component 
- fixed IOC-231 - Boilerplate methods on facilities should be hidden from IntelliSense when configuring a facility
- fixed IOC-230 - Missing Mixins/InterceptorSelectors/ProxyGenerationHooks and TypedFactoryFacility's component selectors are not detected until resolution time
- fixed IOC-229 - Qurerying for subsystem is case sensitive
- implemented IOC-228 - Chicken and egg problem when trying to inherit from DefaultDependencyResolver
- fixed IOC-227 - ResolveAll fails for generic forwarded registrations 
- fixed IOC-224 - Obsolete message on some members of old obsolete API don't compile
- fixed IOC-223 - Fluent registration registers components with System.Object service when no BasedOn discriminator is provided

2.5.1 (2010-09-21)
==================

- added "Potential lifestyle mismatches" debugger view item, that will detect and list situations where Singleton depends on Transient or PerWebRequest component (which is usually a bug)

- fixed issue where forwarding main type would create additional, superfluous handler

- WebLogger/WebLoggerFactory was removed from Castle.Core so all references to that are removed from Windsor as well

- obseleted UseSingleProxyInterface in preference over IProxyGenerationHook

- fixed IOC-220 Composite pattern with CollectionResolver should be properly supported without throwing "cycle detected" exception

- fixed IOC-218 Enable methods that take arguments as anonymous objects in Silverlight version. This works in SL, but requires [assembly: InternalsVisibleTo(Castle.Core.Internal.InternalsVisible.ToCastleCore)]

- fixed IOC-217 Enable ISupportInitialize support as lifecyclecle concern in Silverlight 4

- implemented IOC-216 Make it possible to specify service overrides in DependsOn, either via Property, or ServiceOverride entry class
